# SupekSymmetry

./: .gitignore  .replit  app.py  next.config.js  package-lock.json  package.json  pyproject.toml  utils.py
components/: CoordinateSystem.js  MathInputKeypad.js  Sidebar.js
pages/: index.js
pages/api/: health.js
styles/: MathInputKeypad.module.css  Sidebar.module.css  globals.css
utils/: mathFunctions.js
