[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit>=1.44.0",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]
